--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             .header, .footer {background-color: #afb3a2;
                 padding: 20px;
                 margin: 25px;
-                text-align: center;}
+                text-align: center;
+                position: fixed }
             .container {padding: 20px;
                 margin: 25px;}
             img {width: 125px;
